//
//  TiltingLoader_UI_Tests.swift
//  TiltingLoader-UI-Tests
//
//  Created by Taylor Franklin on 6/9/15.
//  Copyright © 2015 Taylor Franklin. All rights reserved.
//

import Foundation
import XCTest

class TiltingLoader_UI_Tests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        let fadeDismissalStaticText = app.tables.staticTexts["Fade Dismissal"]
        fadeDismissalStaticText.tap()
        
        let dynamicDismissalStaticText = app.tables.staticTexts["Dynamic Dismissal"]
        dynamicDismissalStaticText.tap()
        dynamicDismissalStaticText.tap()
        dynamicDismissalStaticText.tap()
        fadeDismissalStaticText.tap()
        app.tables.staticTexts["Convenience Method"].tap()
        
        let reverseAnimationStaticText = app.tables.staticTexts["Reverse Animation"]
        reverseAnimationStaticText.tap()
        reverseAnimationStaticText.tap()
        dynamicDismissalStaticText.tap()
        
        let roundedShapeStaticText = app.tables.staticTexts["Rounded Shape"]
        roundedShapeStaticText.tap()
        roundedShapeStaticText.tap()
        app.navigationBars["TiltingLoader Demo"].tap()
        
        
    }
    
}
